chore:添加依赖库完善开发流程

--- a/package.json
+++ b/package.json
@@ -5,24 +5,34 @@
   "main": "./dist/electron/main.js",
   "scripts": {
     "dev": "webpack-dev-server --config ./build/webpack.dev.js",
-    "start": "npm run dev"
+    "start": "npm run dev",
+    "electron": "webpack-dev-server --config ./build/webpack.dev.js && electron ./src/main/index.js"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
+    "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.2",
     "currently": "^0.0.8",
+    "electron": "^8.2.3",
+    "electron-builder": "^22.4.1",
+    "electron-log": "^4.1.1",
+    "electron-updater": "^4.2.5",
     "file-loader": "^6.0.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-webpack-plugin": "^4.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.4",
     "url-loader": "^4.1.0",
     "vue-loader": "^15.9.1",
+    "vue-style-loader": "^4.1.2",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "axios": "^0.19.2",
