--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "author": "jason",
   "main": "./dist/electron/main.js",
   "scripts": {
-    "dev": "webpack-dev-server --config ./build/webpack.dev.js",
-    "start": "npm run dev",
-    "electron": "webpack-dev-server --config ./build/webpack.dev.js && electron ./src/main/index.js"
+    "web": "webpack-dev-server --config build/webpack.web.js",
+    "dev": "node build/electron-runner.js"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -14,28 +13,30 @@
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "concurrently": "^5.1.0",
     "css-loader": "^3.5.2",
-    "currently": "^0.0.8",
     "electron": "^8.2.3",
     "electron-builder": "^22.4.1",
     "electron-log": "^4.1.1",
     "electron-updater": "^4.2.5",
     "file-loader": "^6.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.4",
     "url-loader": "^4.1.0",
     "vue-loader": "^15.9.1",
     "vue-style-loader": "^4.1.2",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "webpack-merge": "^4.2.2"
+    "webpack": "^4.15.1",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-hot-middleware": "^2.22.2",
+    "webpack-merge": "^4.1.3"
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "electron-window-state": "^5.0.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "vue": "^2.6.11",
