--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "electron-builder": "^22.4.1",
     "electron-log": "^4.1.1",
     "electron-updater": "^4.2.5",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
