--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "mockjs": "^1.1.0",
+    "node-sass": "^4.14.0",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.4",
     "url-loader": "^4.1.0",
     "vue-loader": "^15.9.1",
     "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
@@ -37,7 +41,9 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "echarts": "^4.7.0",
     "electron-window-state": "^5.0.3",
+    "element-ui": "^2.13.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "vue": "^2.6.11",
